@@ -1,4 +1,4 @@
-$Id: History,v 1.8 2001-02-21 14:44:33 maire Exp $
+$Id: History,v 1.9 2001-03-27 09:23:59 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,7 +14,10 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
-
+     
+27-03-01  mma (testem5-V03-00-04)
+	  - set cppflag G4NOHIST = true in gnumakefile
+	  
 21-02-01  mma (testem5-V03-00-03)
           - hbook histograms restored
 	  
